--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,16 @@
 {
   "version": 2,
   "builds": [
-    { "src": "index.js", "use": "@vercel/node" }
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-    { "src": "/status", "dest": "index.js" },
-    { "src": "/on", "dest": "index.js" },
-    { "src": "/off", "dest": "index.js" },
-    { "src": "/numOutputs", "dest": "index.js" },
-    { "src": "/(.*)", "dest": "public/$1" }
+    { "src": "/outputs", "dest": "/index.js" },
+    { "src": "/status", "dest": "/index.js" },
+    { "src": "/on", "dest": "/index.js" },
+    { "src": "/off", "dest": "/index.js" },
+    { "src": "/(.*)", "dest": "/public/$1" }
   ]
 }
