--- a/vercel.json
+++ b/vercel.json
@@ -7,10 +7,21 @@
     }
   ],
   "routes": [
-    { "src": "/outputs", "dest": "/index.js" },
-    { "src": "/status", "dest": "/index.js" },
-    { "src": "/on", "dest": "/index.js" },
-    { "src": "/off", "dest": "/index.js" },
-    { "src": "/(.*)", "dest": "/public/$1" }
+    {
+      "src": "/status",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/on",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/off",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/public/$1"
+    }
   ]
 }
