--- a/vercel.json
+++ b/vercel.json
@@ -20,6 +20,10 @@
       "dest": "/index.js"
     },
     {
+      "src": "/connection",
+      "dest": "/index.js"
+    },
+    {
       "src": "/(.*)",
       "dest": "/public/$1"
     }
