--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
   ],
   "routes": [
     {
-      "src": "/check-connectivity",
+      "src": "/check-connection",
       "dest": "/index.js"
     },
     {
@@ -21,6 +21,10 @@
     },
     {
       "src": "/off",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/no-internet.html",
       "dest": "/index.js"
     },
     {
