--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Chirag Aggarwal",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jquery": "^3.7.0",
     "nodemon": "^2.0.22"
